apps/kubelab/plexanisync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: tautulli.mozka.tv
    external-dns.alpha.kubernetes.io/target: d8159c1f-555c-4b8a-b44b-db872b68f4d5.cfargotunnel.com
  name: tautulli-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: tautulli.mozka.tv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli
                port:
                  number: 8181
